test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    workspace-id: ws111222
spec:
  containers:
  - image: k8s.gcr.io/test-webserver
    name: test-container
    volumeMounts:
    - mountPath: /test0
      name: test-volume
    - mountPath: /test1
      name: test-volume1
    - mountPath: /test2
      name: test-volume2
    - mountPath: /test3
      name: test-volume3
    - mountPath: /etc/test-webserver
      name: config
  volumes:
  - name: test-volume
    hostPath:
      path: /data
      type: DirectoryOrCreate
  - name: test-volume2
    hostPath:
      path: /mnt/workspace/public
      type: DirectoryOrCreate
  - name: test-volume1
    hostPath:
      path: /data2
      type: DirectoryOrCreate
  - name: test-volume3
    hostPath:
      path: /data3
      type: DirectoryOrCreate
  - name: cm1
    configMap:
      name: config
      items:
      - key: game.properties
        path: game.properties
