remove-workspace-hostpath-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: remove-workspace-hostpath
spec:
  validationFailureAction: enforce
  background: false
  rules:
    - name: remove-workspace-hostpath-volumes
      match:
        resources:
          kinds:
          - Pod
        selector:
          matchLabels:
            workspace-id: ws111222
      mutate:
        patchesJson6902: |-
          - op: remove
            path: /spec/volumes/1
          - op: remove
            path: /spec/containers/0/volumeMounts/2
